# popcorn-sales-manager

./: .gitignore  AGENT.md  DYNAMODB_RESTRUCTURING.md  LOCALSTACK.md  PHASE2_SUMMARY.md  README.md  TODO.md  TODO_SIMPLIFY_LAMBDA.md  deploy-localstack.sh  docker-compose.yml  package-lock.json  package.json  pyproject.toml  vitest.global.setup.ts  vitest.workspace.ts
.github/: copilot-instructions.md
cdk/: .env.example  .gitignore  README.md  app.py  build-lambda-layer.sh  cdk.json  deploy-cognito-branding.sh  deploy-with-import.sh  deploy.sh  generate_import_file.py  generate_sms_role_import.py  package-lock.json  pyproject.toml
cdk/assets/: managed-login-settings.json
cdk/cdk/: appsync.py  auth.py  cdk_stack.py  cleanup_hook.py  cloudfront_site.py  dns_certificates.py  dynamodb_tables.py  helpers.py  iam_roles.py  lambdas.py  resource_lookup.py  s3_buckets.py
cdk/cdk/appsync/: __init__.py  api.py  datasources.py  resolver_builder.py
cdk/cdk/appsync/functions/: __init__.py  payment_methods.py  profiles.py
cdk/cdk/appsync/js-resolvers/: check_payment_methods_access_fn.js  create_catalog_fn.js  create_payment_method_fn.js  create_payment_method_pipeline_resolver.js  create_share_fn.js  delete_catalog_pipeline_resolver.js  delete_payment_method_from_prefs_fn.js  delete_payment_method_no_qr_pipeline_resolver.js  delete_payment_method_pipeline_resolver.js  delete_payment_method_qr_code_pipeline_resolver.js  delete_qr_code_direct_resolver.js  delete_share_fn.js  filter_payment_methods_by_access_fn.js  find_shared_campaigns_resolver.js  get_campaign_for_order_fn.js  get_campaign_resolver.js  get_catalog_fn.js  get_catalog_for_delete_fn.js  get_catalog_for_shared_campaign_fn.js  get_owner_payment_methods_fn.js  get_payment_method_for_delete_fn.js  get_payment_methods_fn.js  inject_global_payment_methods_fn.js  lambda_passthrough_resolver.js  list_my_catalogs_fn.js  list_my_shared_campaigns_resolver.js  list_my_shares_resolver.js  mark_invite_used_fn.js  my_payment_methods_pipeline_resolver.js  payment_method_qr_code_url_resolver.js  payment_methods_for_profile_pipeline_resolver.js  query_campaigns_fn.js  query_shares_fn.js  seller_profile_latest_campaign_resolver.js  seller_profile_permissions_resolver.js  set_owner_account_id_in_stash_fn.js  shared_profile_field_resolver.js  update_campaign_fn.js  update_catalog_fn.js  update_payment_method_fn.js  (+4 more)
cdk/cdk/appsync/mapping-templates/: get_catalog_response.vtl
cdk/cdk/appsync/resolvers/: __init__.py  fields.py  mutations.py  queries.py
cdk/cdk/resolvers/: account_id_resolver.js  catalog_owner_account_id_resolver.js  check_catalog_usage_fn.js  check_existing_share_fn.js  check_profile_read_auth_fn.js  check_share_permissions_fn.js  check_share_read_permissions_fn.js  check_write_permission_fn.js  count_user_shared_campaigns_fn.js  create_catalog_fn.js  create_invite_fn.js  create_order_fn.js  create_share_fn.js  create_shared_campaign_fn.js  delete_campaign_fn.js  delete_campaign_orders_fn.js  delete_catalog_fn.js  delete_catalog_pipeline_resolver.js  delete_invite_item_fn.js  delete_order_fn.js  delete_profile_campaigns_fn.js  delete_profile_invite_fn.js  delete_profile_invites_fn.js  delete_profile_metadata_fn.js  delete_profile_ownership_fn.js  delete_profile_shares_fn.js  delete_share_fn.js  delete_shared_campaign_fn.js  diagnose_catalog_for_order_fn.js  ensure_catalog_final_fn.js  ensure_catalog_for_order_fn.js  fetch_catalog_for_update_fn.js  fetch_profile_fn.js  find_shared_campaigns_resolver.js  get_account_for_shared_campaign_fn.js  get_campaign_for_order_fn.js  get_catalog_fn.js  get_catalog_for_delete_fn.js  get_catalog_for_shared_campaign_fn.js  get_catalog_for_update_order_fn.js  (+62 more)
cdk/schema/: schema.graphql
cdk/tests/: __init__.py
cdk/tests/unit/: __init__.py  test_auth.py  test_cdk_stack.py  test_cleanup_hook.py  test_cloudfront_site.py  test_dns_certificates.py  test_dynamodb_tables.py  test_helpers.py  test_iam_roles.py  test_lambdas.py  test_resolver_builder.py  test_resource_lookup.py  test_s3_buckets.py
docs/: ADMIN_ACCESS.md  APPSYNC_TESTING_STRATEGY.md  AWS_CLI_APPSYNC_TESTING.md  BRANDING_GUIDE.html  BRANDING_GUIDE.md  DEPLOYMENT_ISSUES.md  DEVELOPER_GUIDE.md  GETTING_STARTED.md  TESTING_GUIDE.md  VTL_RESOLVER_NOTES.md
frontend/: .env.example  .gitignore  LOCAL_DEV.md  codegen.ts  debug-width.js  deploy.sh  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  setup-local-dev.sh  vite.config.ts  vitest.integration.config.ts
scripts/: add-admin.sh  create-test-users.sh  delete-shared-public-catalogs.sh  delete-test-catalogs.py  delete-test-catalogs.sh  migrate_shares_add_owner.py  migrate_shares_prefix.py  migrate_to_multi_table.py  migrate_unit_numbers.py  test_graphql_queries.sh  test_share_queries.sh  validate_and_fix_shares.py
src/: __init__.py
tests/: __init__.py  (+2 more)
(+272 files in other folders)
