[project]
name = "kernelworx"
version = "0.1.0"
description = "Popcorn Sales Manager - Lambda functions and backend code"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.0",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "boto3-stubs[dynamodb,s3,lambda,sns,ses]>=1.41.5",
    "isort>=7.0.0",
    "moto[dynamodb,s3,lambda,sns,ses]>=5.1.17",
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "types-openpyxl>=3.1.5.20250919",
]

[tool.ruff]
line-length = 120
# Use Ruff for linting and formatting. Run `ruff check` and `ruff format` to apply fixes.

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=100",
]

[tool.coverage.run]
branch = true
omit = []

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "pragma: no branch",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
